Fix MainSection alignment

--- a/src/App.css
+++ b/src/App.css
@@ -16,5 +16,11 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
+}
+
+#MainSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
